--- a/app/views/apartment_complexes/show.html.erb
+++ b/app/views/apartment_complexes/show.html.erb
@@ -42,8 +42,7 @@ th {
 <h1><%= @apartment_complex.apartment_complex_name %> </h1>
 <table>
   <tbody>
-    <th>First Name</th>
-    <th>Last Name</th>
+    <th>Full Name</th>
     <th>Apartment Number</th>
     <th>Currently Leasing</th>
 
