--- a/app/assets/stylesheets/grayscale.css
+++ b/app/assets/stylesheets/grayscale.css
@@ -6,14 +6,15 @@
 
 
 #mainNav {
-  min-height: 56px;
-  background-color: #fff;
+  position: fixed;
+  max-height: 25px;
+  background-color: black;
 }
 
 #mainNav .navbar-toggler {
   font-size: 80%;
   padding: 0.75rem;
-  color: black;
+  color: white;
   border: 1px solid #64a19d;
 }
 
@@ -22,7 +23,7 @@
 }
 
 #mainNav .navbar-brand {
-  color: color;
+  color: black;
   font-weight: 700;
   padding: .9rem 0;
 }
@@ -43,19 +44,19 @@
     padding-top: 0;
     padding-bottom: 0;
     border-bottom: none;
-    background-color: transparent;
+    background-color: black;
     -webkit-transition: background-color 0.3s ease-in-out;
     transition: background-color 0.3s ease-in-out;
   }
   #mainNav .navbar-brand {
     padding: .5rem 0;
-    color: rgba(0, 0, 0, 1);
+    color: white;
   }
   #mainNav .nav-link {
     -webkit-transition: none;
     transition: none;
     padding: 2rem 1.5rem;
-    color: rgba(0, 0, 0, 1);
+    color: white;
   }
   #mainNav .nav-link:hover {
     color: rgba(255, 255, 255, 0.75);
@@ -307,58 +308,54 @@ footer {
 .rating
 {
   position: absolute;
-  top: 50%;
-  left: 35%;
+  top: 15%;
+  left: 30%;
   display: flex;
 
 }
-.rating input
-{
-  /*display: none;*/
-}
-.rating label
-{
-  display: block;
-  cursor: pointer;
-  width: 50px;
-  background: transparent;
-}
-.rating label:before
-{
 
-  position: relative;
-  display: block;
-  color: #101010;
-}
-.rating label:after
-{
-
-  position: absolute;
-  display: block;
-  font-size: 50px;
-  color: #1f9cff;
-  top: 0;
-  opacity: 0;
-  transition: .5s;
-
-}
-.rating label:hover:after,
-.rating label:hover ~ label:after,
-.rating input:checked ~ label:after
-{
-  opacity:1;
-}
 .note
 {
   position: absolute;
-  top: 60%;
-  left: 35%;
+  top: 25%;
+  left: 30%;
+  display: flex;
+}
+
+.rating1
+{
+  position: absolute;
+  top: 5%;
+  left: 45%;
+  display: flex;
+
+}
+
+.note1
+{
+  position: absolute;
+  top: 10%;
+  left: 45%;
+  display: flex;
+}
+.submit1
+{
+  position: absolute;
+  top: 15%;
+  left: 45%;
   display: flex;
 }
 .submit
 {
   position: absolute;
-  top: 70%;
-  left: 35%;
+  top: 35%;
+  left: 30%;
   display: flex;
+}
+.one {
+    border-style: solid;
+    border-width: 2px;
+    color: white;
+    width: 60%;
+
 }
