--- a/app/assets/stylesheets/grayscale.css
+++ b/app/assets/stylesheets/grayscale.css
@@ -355,6 +355,10 @@ footer {
 .one {
     border-style: solid;
     border-width: 2px;
+    padding-left: 2px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    padding-right: 2px;
     color: white;
     width: 60%;
 
