--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,45 +12,51 @@
       <br/>
 
       <h1>Sign up</h1>
-
+<div align = "pad">
 <% resource.build_renter if resource.renter.nil? %>
 <%= form_for(resource, :as => resource_name,
                        :url => registration_path(resource_name)) do |f| %>
-  <ul>
+
     <%= devise_error_messages! %>
     <%= f.fields_for :renter do |renter_fields| %>
-      <li class="first_name">
+
         <%= renter_fields.label :first_name %>
+        <br>
         <%= renter_fields.text_field :first_name %>
-      </li>
-      <li class ="last_name">
+        <br>
+
         <%= renter_fields.label :last_name %>
+          <br>
         <%= renter_fields.text_field :last_name %>
-      </li>
-      <li class ="apartment_id">
+<br>
+
         <%= renter_fields.label :apartment_id %>
+          <br>
         <%= renter_fields.text_field :apartment_id %>
-      </li>
+<br>
     <% end %>
-    <li class="email">
+<br>
       <%= f.label :email %>
+  <br>
       <%= f.email_field :email, :autofocus => true %>
-    </li>
-    <li class="password">
+<br>
+
       <%= f.label :password %>
+  <br>
       <%= f.password_field :password %>
-    </li>
-    <li class="password">
+<br>
       <%= f.label :password_confirmation %>
+  <br>
       <%= f.password_field :password_confirmation %>
-    </li>
-    <li>
+<br>
+</div>
+<br>
       <%= f.submit %>
-    </li>
-    <li>
+
+
       <p><%= render "devise/shared/links" %></p>
-    </li>
-  </ul>
+
+
 <% end %>
 </div>
 </section>
