--- a/app/views/renters/show.html.erb
+++ b/app/views/renters/show.html.erb
@@ -32,7 +32,7 @@ h2
 }
 
 .pad{
-  padding-left: 5%;
+  padding-left: 1%;
 
 }
 table {
@@ -113,8 +113,9 @@ th {
                                                         </div>
                       </div>
                       <!-- The users that this user has been rated by will show here -->
-                      <div class="form-group">
+
                         <label for="Rating"><h4>Overall Rating: <%= Rating.avg_rating(@renter.user) %> </h4></label><br/>
+                        <br>
                         <br>
 
 
@@ -188,15 +189,17 @@ th {
                             <%end%>
                           <%end%>
                         <%end%>
-                        <br>
-
+<div class="padder1">
+  <br>
+                          <h4 style ="color:white;"><u>User's Ratings</u></h4>
                           <% Rating.rated_by_users(@renter.user).each do |rating| %>
+
                           <div class ="one">
                           <div class="col-xs-6">
 
                                 <% user = User.find(rating.user1_id) %>
                                 <%if(!user.tenant.blank?) %>
-                                
+
                                 <label for="Rating"><h4>Rated by: <%= user.tenant.first_name + " " + user.tenant.last_name  %> </h4></label><br/>
 
                               <%end%>
@@ -204,24 +207,28 @@ th {
                                 <label for="Rating"><h4>Rating: <%= rating.rating %> </h4></label><br/>
                               <%end%>
                               <%if(!rating.description.blank?) %>
-                                <label for="Rating"><h4>Description: <%= rating.description %> </h4></label><br/>
+                                <label for="Rating"><h4>Description: <%= rating.description %> </h4></label>
                               <%end%>
-                          </div>
+
 
 
                          <% end %>
                          </div>
                          </div>
-
+                         </div>
+</div>
                       <!-- The users that have been rated by this user will show here -->
                       <div class="form-group">
-                        <br>
 
+                        <div class ="padder">
+                          <br>
+                        <h4 style ="color:white;"><u>User's Ratings Given</u></h4>
                         <% Rating.rated_users(@renter.user).each do |rating| %>
                         <div class ="one">
-                          <div class="col-xs-6">
+
                                 <% user = User.find(rating.user2_id) %>
                                 <%if(!user.tenant.blank?) %>
+
                                 <label for="Rating"><h4>Rated: <%= user.tenant.first_name + " " + user.tenant.last_name  %> </h4></label><br/>
                               <%end%>
                               <%if(!rating.rating.blank?) %>
@@ -229,20 +236,21 @@ th {
                               <%end%>
                               <%if(!rating.description.blank?) %>
                               <div style = "word-wrap: break-word;"
-                                <label for="Rating"><h4>Description: <%= rating.description %> </h4></label><br/>
+                                <label for="Rating"><h4>Description: <%= rating.description %> </h4></label>
                                 </div>
                                 </div>
                               <%end%>
                           </div>
-                          <br>
+
                          <% end %>
 
+                         </div>
                       </div>
-              </div>
+<br>
               <!--If the user is this renters tenant it will show a rating form for the renter-->
 
 
-              </div><!--/tab-pane-->
+              <!--/tab-pane-->
           <!--/tab-content-->
 
     <!--/row-->
