--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -18,13 +18,13 @@
 
     <!-- Custom styles for this template -->
     <%= stylesheet_link_tag "grayscale.css" %>
-   
+
   </head>
 
   <body id="page-top">
 
     <!-- Navigation -->
- <!--   
+ <!--
     <nav class="navbar navbar-expand-lg fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand" href="/">Renters & Ratings</a>
@@ -60,7 +60,7 @@
 
             <li class="nav-item">
               <a class="nav-link" href="/login">Login</a>
-            </li>          
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="/register">Register</a>
             </li></ul>
@@ -75,11 +75,11 @@
       <div class="container d-flex h-100 align-items-center">
         <div class="mx-auto text-center">
           <h1 class="mx-auto my-0 text-uppercase">Renters & Ratings</h1>
-          <h2 class="text-white-50 mx-auto mt-2 mb-5">A free, responsive, one page Bootstrap theme created by Start Bootstrap.</h2>        </div>
+  </div>
       </div>
     </header>
 
-       
+
     <!-- Contact Section -->
     <section class="contact-section bg-black">
       <div class="container">
