--- a/app/views/renters/index.html.erb
+++ b/app/views/renters/index.html.erb
@@ -35,6 +35,7 @@ td,  th {
 }
 
 tr:nth-child(even){background-color: #f2f2f2;}
+tr:nth-child(odd){background-color: lightgray;}
 
 tr:hover {background-color: #ddd;}
 
@@ -71,7 +72,7 @@ th {
       <div class="row">
         <div class="col-sm-10">
       <th>Apartmentid</th>
-      <th>Full Name</th>      
+      <th>Full Name</th>
 <th>Leasing</th>
           </tr>
   </div>
@@ -85,7 +86,7 @@ th {
     <% @renters.each do |renter| %>
         <tr>
         <td><%= renter.apartment_id %></td>
-        
+
 <td><%= link_to "#{renter.first_name} #{renter.last_name}", renter_path(renter.id) %></td>
 
                 <td><%= renter.leasing %></td>
