--- a/app/views/tenants/show.html.erb
+++ b/app/views/tenants/show.html.erb
@@ -33,7 +33,9 @@ td,  th {
     padding: 8px;
 }
 
+
 tr:nth-child(even){background-color: #f2f2f2;}
+tr:nth-child(odd){background-color: lightgray;}
 
 tr:hover {background-color: #ddd;}
 
@@ -242,7 +244,7 @@ th {
                             </div>
                          <% end %>
 
-                    
+
 
 
 
