search first and or last name

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -51,7 +51,7 @@
 <br>
 </div>
 <br>
-      <%= f.submit "Create User" %>
+      <%= f.submit %>
 
 
       <p><%= render "devise/shared/links" %></p>
