--- a/app/views/renters/index.html.erb
+++ b/app/views/renters/index.html.erb
@@ -61,6 +61,11 @@ th {
 <p id="notice"><%= notice %></p>
 
 <h1>Renters</h1>
+<%= form_tag renters_path, :method => 'get' do %>
+  <%= text_field_tag :search, params[:search] %>
+  <%= submit_tag "Search" %>
+<% end %>
+
 
 
 <table>
